# robotiq_2f85_ros2

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml
robotiq_description/: CMakeLists.txt  local_setup.sh
robotiq_gripper_gazebo/: CMakeLists.txt  package.xml
robotiq_gripper_gazebo/config/: Gripper YAML  gripper_controller.yaml  robotiq_gripper_controller.yaml
robotiq_gripper_gazebo/launch/: launch_gripper_gazebo.py
robotiq_gripper_gazebo/urdf/: robotiq_2f_85_gripper.urdf.xacro  robotiq_2f_85_macro.urdf.xacro  robotiq_gripper.ros2_control.xacro  robotiq_gripper.transmissions.xacro
